--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,11 @@ pytest = "^7.4.2"
 pytest-watch = "^4.2.0"
 jedi-language-server = "^0.41.0"
 neovim = "^0.3.1"
+ruff = "^0.0.290"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+select = ["ALL"]
