--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ neovim = "^0.3.1"
 ruff = "^0.0.290"
 taskipy = "^1.12.0"
 ruff-lsp = "^0.0.39"
+pre-commit = "^3.4.0"
 
 [build-system]
 requires = ["poetry-core"]
