--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.10"
 python-openstackclient = "^6.2.0"
 python-dateutil = "^2.8.2"
+click = "^8.1.7"
 
 
 [tool.poetry.group.dev.dependencies]
