--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ taskipy = "^1.12.0"
 ruff-lsp = "^0.0.39"
 pre-commit = "^3.4.0"
 
+[tool.poetry.scripts]
+conoha-client = "conoha_client.pra:main"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
