--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.10"
 python-openstackclient = "^6.2.0"
 python-dateutil = "^2.8.2"
 click = "^8.1.7"
+tabulate = "^0.9.0"
+click-shell = "^2.1"
 
 
 [tool.poetry.group.dev.dependencies]
