--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python-dateutil = "^2.8.2"
 click = "^8.1.7"
 tabulate = "^0.9.0"
 click-shell = "^2.1"
+pydantic = "^2.4.0"
 
 
 [tool.poetry.group.dev.dependencies]
