--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,8 @@ select = ["ALL"]
 
 ignore = [
   "ANN101", # selfの型注釈いれろ
-  "ANN102"  # clsの型注釈いれろ
+  "ANN102", # clsの型注釈いれろ
+  "TCH003"  # なんか from datetime がtype_checking blockに入れられる
   ]
 
 exclude = [
