--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ click = "^8.1.7"
 tabulate = "^0.9.0"
 click-shell = "^2.1"
 pydantic = "^2.4.0"
+flatten-dict = "^0.4.2"
 
 
 [tool.poetry.group.dev.dependencies]
