--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ ruff-lsp = "^0.0.39"
 pre-commit = "^3.4.0"
 
 [tool.poetry.scripts]
-conoha-client = "conoha_client.pra:main"
+conoha-client = "conoha_client.cli:main"
 
 [build-system]
 requires = ["poetry-core"]
