--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ pre-commit = "^3.4.0"
 
 [tool.poetry.scripts]
 conoha-client = "conoha_client.cli:main"
+ccli          = "conoha_client.cli:main" # alias
 
 [build-system]
 requires = ["poetry-core"]
