pytestでassert使いたいンゴ

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,8 @@ ignore = [
   "ANN101", # selfの型注釈いれろ
   "ANN102", # clsの型注釈いれろ
   "TCH003", # なんか from datetime がtype_checking blockに入れられる
-  "ERA001"  # commented-out codeを残す
+  "ERA001", # commented-out codeを残す
+  "S101"    # assertを許可したい
   ]
 
 [tool.taskipy.tasks]
