--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,15 @@
 [tool.poetry]
 name = "conoha-client"
-version = "0.1.1"
+version = "0.0.0"
 description = ""
 authors = ["Shogo Goto <gotoadmn0605@gmail.com>"]
 readme = "README.md"
+repository = "https://github.com/shogogoto/conoha-client"
+
+[tool.poetry-dynamic-versioning]
+enable = true
+format = "{base}" # defaultで PEP440
+vcs = "git"
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -14,7 +20,6 @@ tabulate = "^0.9.0"
 click-shell = "^2.1"
 pydantic = "^2.4.0"
 flatten-dict = "^0.4.2"
-
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.2"
@@ -31,8 +36,8 @@ conoha-client = "conoha_client.cli:main"
 ccli          = "conoha_client.cli:main" # alias
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core", "poetry-dynamic-versioning"]
+build-backend = "poetry_dynamic_versioning.backend"
 
 [tool.ruff]
 select = ["ALL"]
