--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ tabulate = "^0.9.0"
 click-shell = "^2.1"
 pydantic = "^2.4.0"
 flatten-dict = "^0.4.2"
+makefun = "^1.15.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.2"
