--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ pre-commit = "^3.4.0"
 requests-mock = "^1.11.0"
 
 [tool.poetry.scripts]
-conoha-client = "conoha_client.cli:main"
+# conoha-client = "conoha_client.cli:main"
 ccli          = "conoha_client.cli:main" # alias
 
 [build-system]
