--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "conoha-client"
 version = "0.0.0" # git tagの値で置換される
-description = "ConoHa VPS用CLI (Python製)"
+description = "ConoHa VPS用CLI (2023.11)"
 authors = ["Shogo Goto <gotoadmn0605@gmail.com>"]
 readme = "README.md"
 repository = "https://github.com/shogogoto/conoha-client"
